問題点つみのこし（prop渡せない、非推奨のhtmlimportで書いてる）放置して一旦プッシュ

--- a/my-component1/src/development.html
+++ b/my-component1/src/development.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>dev確認用ダミーHTML（npm run devのときだけ使う）</title>
-    <link rel="import" href="html-element.html">
+    <link rel="import" href="my-component1.html">
 </head>
 <body>
-    <react-app testProperty="React my component1"></react-app>
+    <my-component1 testProp="React my component1"></my-component1>
 </body>
 </html>
