--- a/my-component1/src/my-component1.html
+++ b/my-component1/src/my-component1.html
@@ -1,1 +1,1 @@
-<script src="<%= htmlWebpackPlugin.files.chunks['main'].entry %>"></script>
+<script src="<%= htmlWebpackPlugin.files['my-component1'] %>"></script>
